--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1010,9 +1010,10 @@ h1.page-header {
     height: 1000px;
 }
 
+.btn-group>.btn:first-child:not(:last-child):not(.dropdown-toggle) {
+    border-right: rgba(68, 68, 68, 0.13) solid 2px;
+}
 
-
-
-
-
-
+.btn-group>.btn:last-child:not(:first-child), .btn-group>.dropdown-toggle:not(:first-child) {
+    border-left: rgba(68, 68, 68, 0.13) solid 2px;
+}
